--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -1,4 +1,3 @@
-/* .main {
-  height: auto;
+.main {
   width: 100%;
-} */
+}
