--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,10 +15,10 @@ body {
   background-color: var(--background);
   font-family: "Abril Fatface";
   font-size: 62.5%;
-  min-height: 100vh;
-  width: 100%;
+  height: 100%;
+  /* width: 100% !important;
   display: flex;
-  flex-direction: column;
+  flex-direction: column; */
 }
 
 * {
@@ -33,9 +33,10 @@ section {
 
 main {
   padding: 0;
-  flex-grow: 1;
+  flex: 1;
   height: auto;
   padding-bottom: 5rem;
+  overflow: auto;
 }
 
 code {
